# feature-flag-demo

./: .gitignore  README.md  main.py  pyproject.toml
app/apis/v1/: routes.py
app/apis/v1/appconfig/: apis.py
app/modules/appconfig/: service.py
app/setup/: service.py
templates/: table.html
