[tool.poetry]
name = "featureflagdemo"
version = "0.1.0"
description = ""
authors = ["seunghunlee01 <seunghun.lee1@wesang.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
boto3 = "^1.28.15"
sample-helper-aws-appconfig = "^2.0.3"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

